--- a/lib/templates/m.ejs
+++ b/lib/templates/m.ejs
@@ -6,6 +6,24 @@
 	<title>Document</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/m.css">
+	<script>
+        var config = (function(){
+       	    var city = "<%= city %>"
+			var reqUrl = "<%= reqUrl %>"
+			var products = "<% JSON.parse(JSON.stringify(products)) %>"
+            return {
+            	getCity : function(){
+            		return city
+            	},
+            	getreqUrl : function(){
+            		return getreqUrl;
+            	},
+            	getProducts : function(){
+            		return products;
+            	}
+            }
+        })()
+	</script>
 	<script src="js/zepto.min.js"></script>
 	<script src="js/m.js"></script>
 </head>
@@ -66,22 +84,26 @@
 	<div class="m_container">
 		<div class="content">
 			<% products.forEach(function(product){ %>
-				<div class="item">
-					<div style="position: relative;">
-						<img class="img" src="img/pic.png" alt="">
-						<div class="saleoff">
-							<img src="img/pic-saleoff.png" alt="">
-							<div class="saleoff_text"><%= product.saleoff %></div>
-						</div>
-						<div class="textbox">
-							<div class="building">
-								<%= product.name %>
+				<div class="item" data-id="<%= product.id %>" data-phone1="<%= product.phone_1 %>" data-phone2="<%= product.phone_2 %>">
+					<a href="<%= product.link %>">
+						<div style="position: relative;">
+							<img class="img" src="<%= product.imgUrl %>" alt="">
+							<% if(product.saleoff!="0"&&product.saleoff!="") {%>
+								<div class="saleoff">
+									<img src="img/pic-saleoff.png" alt="">
+									<div class="saleoff_text"><%= product.saleoff %></div>
+								</div>
+							<% } %>
+							<div class="textbox">
+								<div class="building">
+									<%= product.name %>
+								</div>
+								<div>
+									<%= product.subTitle %>
+								</div>
 							</div>
-							<div>
-								<%= product.keys %>
-							</div>
 						</div>
-					</div>
+					</a>
 					<img class="button" src="img/button-favorable.png" alt="">
 					<div class="info">
 						<div>
@@ -100,8 +122,6 @@
 		<img class="bg-top" src="img/bg-top2.png" alt="">
 		<img class="bg-bottom" src="img/bg-foot.png" alt="">
 	</div>
-	<script>
-       window.city = "<%= city %>"
-	</script>
+	
 </body>
 </html>
