--- a/lib/templates/pc.ejs
+++ b/lib/templates/pc.ejs
@@ -6,6 +6,24 @@
 	<title>Document</title>
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<link rel="stylesheet" href="css/pc.css">
+	<script>
+        var config = (function(){
+       	    var city = "<%= city %>"
+			var reqUrl = "<%= reqUrl %>"
+			var products = "<% JSON.parse(JSON.stringify(products)) %>"
+            return {
+            	getCity : function(){
+            		return city
+            	},
+            	getreqUrl : function(){
+            		return getreqUrl;
+            	},
+            	getProducts : function(){
+            		return products;
+            	}
+            }
+        })()
+	</script>
 	<script src="js/jquery.js"></script>
 	<script src="js/pc.js"></script>
 </head>
@@ -67,15 +85,18 @@
 		<div class="m_container">
 			<div class="content">
 				<% products.forEach(function(product){ %>
-					<div class="item">
-						<div style="position: relative;">
-							<img class="img" src="img/pic_house.png" alt="">
-							<div class="saleoff">
-								<img src="img/pic-saleoff.png" alt="">
-								<div class="saleoff_text"><%= product.saleoff %></div>
+					<div class="item" data-id="<%= product.id %>" data-phone1="<%= product.phone_1 %>" data-phone2="<%= product.phone_2 %>">
+						<a href="<%= product.link %>">
+							<div style="position: relative;">
+								<img class="img" src="<%= product.imgUrl %>" alt="">
+								<% if(product.saleoff!="0"&&product.saleoff!="") {%>
+									<div class="saleoff">
+										<img src="img/pic-saleoff.png" alt="">
+										<div class="saleoff_text"><%= product.saleoff %></div>
+									</div>
+								<% } %>
 							</div>
-							
-						</div>
+						</a>
 						<div class="info">
 							<div class="title building"><%= product.name %></div>
 							<div>区域：<%= product.area %></div>
@@ -85,7 +106,7 @@
 								<img class="button" src="img/pc-favorable.png" alt="">
 							</div>
 							<div class="details">
-								<a href="javascript:void(0);">
+								<a href="<%= product.link %>">
 									<img src="img/button-seemore.png" alt="">
 								</a>
 							</div>
@@ -96,8 +117,5 @@
 			<img class="bg-bottom" src="img/pc-foot.png" alt="">
 		</div>
 	</div>
-	<script>
-       window.city = "<%= city %>"
-	</script>
 </body>
 </html>
