--- a/lib/static/css/m.css
+++ b/lib/static/css/m.css
@@ -1,4 +1,3 @@
-// m.css
 *{
 	padding: 0;
 	margin: 0;
@@ -8,6 +7,10 @@ body,html{
 	height: 100%;
 	margin: 0;
 	padding: 0;
+}
+a{
+	color: inherit;
+	text-decoration: none;
 }
 img  
 {  
@@ -89,6 +92,8 @@ img
 	left: 22px;
 	top: 30px;
 	font-weight: bold;
+	width: 18px;
+	text-align: center;
 }
 .saleoff:nth-of-type(even){
 	right: 13px;
