--- a/lib/static/css/pc.css
+++ b/lib/static/css/pc.css
@@ -1,4 +1,4 @@
-// pc.css
+
 *{
 	padding: 0;
 	margin: 0;
@@ -8,6 +8,10 @@ body,html{
 	height: 100%;
 	margin: 0;
 	padding: 0;
+}
+a{
+	color: inherit;
+	text-decoration: none;
 }
 .body{
 	width: 960px;
@@ -105,6 +109,8 @@ img
 	top: 95px;
 	font-weight: bold;
 	font-size: 50px;
+	width: 56px;
+	text-align: center;
 }
 .saleoff:nth-of-type(even){
 	right: 13px;
