--- a/lib/templates/m.ejs
+++ b/lib/templates/m.ejs
@@ -3,20 +3,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>我爱新房特惠周</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/m.css">
 	<script>
         var config = (function(){
        	    var city = "<%= city %>"
 			var reqUrl = "<%= reqUrl %>"
-			var products = "<% JSON.parse(JSON.stringify(products)) %>"
+			var products = JSON.parse('<%- JSON.stringify(products)%>');
             return {
             	getCity : function(){
             		return city
             	},
             	getreqUrl : function(){
-            		return getreqUrl;
+            		return reqUrl;
             	},
             	getProducts : function(){
             		return products;
@@ -49,7 +49,7 @@
 					    <input id="agrCheck" type="checkbox" checked="checked">
 					    <span class="checkbox"></span>
 					</label>
-					<span>我已经阅读并同意《我爱我家新房委托协议》</span>
+					<span>我已经阅读并同意<a href="https://res01.maifangbar.com/activity/2017/tehuizhou/clause.html">《我爱我家新房委托协议》</a></span>
 				</div>
 				<div class="req">
 					立抢优惠
@@ -71,10 +71,17 @@
 	</div>
 	
 	<div class="m_top">
+		<div style="
+		    position: absolute;
+		    right: 23%;
+		    top: 19%;
+		    color: white;
+		    font-weight: 600;
+		" class=""><%= city %>市</div>
 		<img src="img/bg-top.png" alt="">
 		<div class="des">
 			<div class="title">
-				活动时间：【3月13日-3月17日】
+				活动时间：【3月20日-3月26日】
 			</div>
 			<div class="text">
 				<%= activeDes %>
@@ -104,7 +111,11 @@
 							</div>
 						</div>
 					</a>
-					<img class="button" src="img/button-favorable.png" alt="">
+					<% if(product.type==1){ %>
+						<img class="button" src="img/button-seemore_2.png" alt="">
+					<% }else{ %>
+						<img class="button" src="img/button-favorable.png" alt="">
+					<% } %>	
 					<div class="info">
 						<div>
 							区域：<%= product.area %>
@@ -122,6 +133,18 @@
 		<img class="bg-top" src="img/bg-top2.png" alt="">
 		<img class="bg-bottom" src="img/bg-foot.png" alt="">
 	</div>
-	
+	<div style="display:none">
+		<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1260155408'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1260155408' type='text/javascript'%3E%3C/script%3E"));</script>
+	</div>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	 
+	  ga('create', 'UA-1318775-76', 'auto');
+	  ga('send', 'pageview');
+	 
+	</script>
 </body>
 </html>
