--- a/lib/templates/pc.ejs
+++ b/lib/templates/pc.ejs
@@ -3,20 +3,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>我爱新房特惠周</title>
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<link rel="stylesheet" href="css/pc.css">
 	<script>
         var config = (function(){
        	    var city = "<%= city %>"
 			var reqUrl = "<%= reqUrl %>"
-			var products = "<% JSON.parse(JSON.stringify(products)) %>"
+			var products = JSON.parse('<%- JSON.stringify(products) %>');
             return {
             	getCity : function(){
             		return city
             	},
             	getreqUrl : function(){
-            		return getreqUrl;
+            		return reqUrl;
             	},
             	getProducts : function(){
             		return products;
@@ -51,7 +51,7 @@
 					    <input id="agrCheck" type="checkbox" checked="checked">
 					    <span class="checkbox mycheck"></span>
 					</label>
-					<span>我已经阅读并同意《我爱我家新房委托协议》</span>
+					<span>我已经阅读并同意 <a href="https://res01.maifangbar.com/activity/2017/tehuizhou/clause.html">《我爱我家新房委托协议》</a> </span>
 				</div>
 				<div class="req">
 					立抢优惠
@@ -72,10 +72,18 @@
 		</div>
 	<div class="body">
 		<div class="m_top">
+			<div style="
+			    position: absolute;
+			    right: 29%;
+			    font-size: 24px;
+			    top: 12%;
+			    color: white;
+			    font-weight: 600;
+			"><%= city %>市</div>
 			<img src="img/bg-top_pc.png" alt="">
 			<div class="des">
 				<div class="title">
-					活动时间：【3月13日-3月17日】
+					活动时间：【3月20日-3月26日】
 				</div>
 				<div class="text">
 					<%= activeDes %>
@@ -103,7 +111,11 @@
 							<div>亮点：<%= product.keys %></div>
 							<div>
 								价格：<%= product.price %>
-								<img class="button" src="img/pc-favorable.png" alt="">
+								<% if(product.type==1){ %>
+									<img class="button" src="img/group-5.png" alt="">
+								<% }else{ %>
+									<img class="button" src="img/pc-favorable.png" alt="">
+								<% } %>	
 							</div>
 							<div class="details">
 								<a href="<%= product.link %>">
@@ -116,6 +128,9 @@
 			</div>
 			<img class="bg-bottom" src="img/pc-foot.png" alt="">
 		</div>
+	</div>
+	<div style="display:none">
+		<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1260155408'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1260155408' type='text/javascript'%3E%3C/script%3E"));</script>
 	</div>
 </body>
 </html>
